--- a/techstack.html
+++ b/techstack.html
@@ -6,11 +6,36 @@
   <title>Tech Stack - Lee Joshua Reyes</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <style>
+    /* Same Styles as about.html for consistency */
+    html, body {
+      height: 100%;
+    }
+
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
       background-color: #0f0f0f;
+      color: #fff;
+      position: relative;
+      min-height: 100%;
+      overflow-x: hidden;
+    }
+
+    #particles-js {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: -1;
+    }
+
+    .logo {
+      font-size: 1.8rem;  
+      font-weight: 700;
       color: #fff;
     }
 
@@ -21,22 +46,24 @@
       padding: 20px 40px;
       background-color: #0f0f0f;
       border-bottom: 1px solid #222;
+      position: relative;
     }
 
     header a {
       text-decoration: none;
     }
 
-    .logo {
-      font-size: 1.5rem;
-      font-weight: 700;
-      color: #fff;
+    nav {
+      display: flex;
+      align-items: center;
+      gap: 30px;
     }
 
     nav a {
       color: #aaa;
       text-decoration: none;
       margin-left: 30px;
+      font-size: 1.1rem;
       font-weight: 500;
       transition: color 0.3s;
       position: relative;
@@ -57,88 +84,187 @@
       left: 0;
     }
 
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      justify-content: space-between;
+      width: 28px;
+      height: 22px;
+      cursor: pointer;
+      z-index: 1003;
+    }
+
+    .hamburger span {
+      height: 3px;
+      width: 100%;
+      background: #aaa;
+      border-radius: 2px;
+      transition: all 0.3s ease;
+    }
+
+    .hamburger:hover span {
+      background: #fff;
+      transform: scaleX(1.2);
+    }
+
+    .mobile-nav {
+      display: none;
+    }
+
+    .mobile-nav.active {
+      display: flex;
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: 70%;
+      height: 100%;
+      background-color: #0f0f0f;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 30px;
+      transition: right 0.3s ease;
+      z-index: 1001;
+    }
+
+    .mobile-nav a {
+      font-size: 1.3rem;
+      color: #aaa;
+      text-decoration: none;
+      font-weight: 600;
+      transition: all 0.3s;
+    }
+
+    .mobile-nav a:hover {
+      color: #fff;
+      transform: scale(1.1);
+    }
+
     .container {
-      max-width: 800px;
+      max-width: 900px;
       margin: 60px auto;
       padding: 0 20px;
-      text-align: center;
     }
 
     h2 {
       font-size: 2.5rem;
       color: #e86ffb;
       margin-bottom: 30px;
+      text-align: center;
     }
 
     ul {
       list-style: none;
       padding: 0;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);  
+      grid-template-rows: repeat(2, 1fr);    
+      column-gap: 60px; 
+      row-gap: 10px; 
+      margin-top: 20px;
+      justify-items: center;
+      align-items: center;
+      justify-content: center;                    
     }
 
     li {
       background-color: #222;
-      padding: 20px 20px;
-      margin: 15px 0;
-      border-radius: 8px;
-      font-size: 1.2rem;
+      padding: 20px;                       
+      margin: 10px 0;
+      border-radius: 150px;
+      font-size: 1.1rem;                    
       font-weight: 500;
       display: flex;
       align-items: center;
       justify-content: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+      position: relative;
+      width: 100%;  
+      height: 40%; 
+    }
+
+    li:hover {
+      transform: translateY(-10px);
+      background-color: #333;
+      box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3);
     }
 
     li i {
-      margin-right: 15px; 
-      font-size: 3rem; 
+      margin-right: 10px;               
+      font-size: 6rem;                    
+      transition: transform 0.3s ease, color 0.3s ease;
+      display: inline-block;
     }
 
-    li i.fa-4x {
-      font-size: 4rem; 
+    li:hover i {
+      transform: scale(1.3);
+      color: #fff;
     }
 
-    li i.fa-5x {
-      font-size: 5rem; 
+    li .text {
+      font-size: 1.5rem;              
+      font-weight: 800;
+      letter-spacing: 1px;
+      position: relative;
+      z-index: 1;
+      transition: color 0.3s ease, transform 0.3s ease;
     }
 
-    .c-icon {
-      color: #007f00; 
+    li:hover .text {
+      color: #e86ffb;
+      transform: translateX(10px);
     }
 
-    .cpp-icon {
-      color: #00599C; 
-    }
+    .c-icon { color: #007f00; }
+    .cpp-icon { color: #00599C; }
+    .java-icon { color: #f8981d; }
+    .github-icon { color: #fff; }
+    .html-icon { color: #e34f26; }
+    .css-icon { color: #2965f1; }
+    .git-icon { color: #f05032; }
+    .javascript-icon { color: #f0db4f; }
 
-    .java-icon {
-      color: #f8981d; 
-    }
-
-    .github-icon {
-      color: #24292f; 
-    }
-
-    .html-icon {
-      color: #e34f26; 
-    }
-
-    .css-icon {
-      color: #2965f1; 
-    }
-
+    /* Responsive Design */
     @media (max-width: 768px) {
-      .container {
-        padding: 0 10px;
+      nav {
+        display: none;
       }
 
-      h2 {
+      .hamburger {
+        display: flex;
+      }
+
+      .container {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      .about-text h2 {
         font-size: 2rem;
       }
 
-      li {
+      .about-text p {
         font-size: 1rem;
       }
 
-      nav a {
-        font-size: 0.95rem;
+      ul {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+      }
+
+      li {
+        height: auto;
+        font-size: 1rem;
+        padding: 15px;
+      }
+
+      li i {
+        font-size: 5rem;
+      }
+
+      li .text {
+        font-size: 1.2rem;
       }
     }
 
@@ -148,7 +274,7 @@
       }
 
       .logo {
-        font-size: 1.2rem;
+        font-size: 1rem;
       }
 
       .container {
@@ -156,29 +282,49 @@
         padding: 0 10px;
       }
 
-      h2 {
+      .profile-img img {
+        max-width: 250px;
+      }
+
+      .about-text h2 {
         font-size: 1.8rem;
       }
 
-      li {
+      .about-text p {
         font-size: 0.95rem;
-        padding: 10px 15px;
       }
 
-      nav a {
-        font-size: 0.85rem;
-        margin-left: 15px;
+      ul {
+        grid-template-columns: 1fr;
+      }
+
+      li {
+        height: auto;
+        font-size: 1rem;
+      }
+
+      li i {
+        font-size: 4rem;
+      }
+
+      li .text {
+        font-size: 1.1rem;
       }
     }
   </style>
 </head>
 <body>
 
+  <div id="particles-js"></div>
+
   <header>
-    <a href="index.html">
-      <div class="logo">Lee Joshua Reyes</div>
-    </a>
-    <nav>
+    <a href="index.html" class="logo">Lee Joshua Reyes</a>
+    <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <nav id="nav">
       <a href="about.html">About</a>
       <a href="techstack.html" class="active">Tech Stack</a>
       <a href="certification.html">Certifications</a>
@@ -186,17 +332,92 @@
     </nav>
   </header>
 
+  <!-- Mobile navigation -->
+  <nav id="mobile-nav" class="mobile-nav">
+    <a href="about.html">About</a>
+    <a href="techstack.html" class="active">Tech Stack</a>
+    <a href="certification.html">Certifications</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+
   <div class="container">
     <h2>My Tech Stack</h2>
     <ul>
-      <li><i class="fab fa-cuttlefish fa-5x c-icon"></i> C Language</li>
-      <li><i class="fab fa-cuttlefish fa-5x cpp-icon"></i> C++</li>
-      <li><i class="fab fa-java fa-5x java-icon"></i> Java</li>
-      <li><i class="fab fa-github fa-5x github-icon"></i> Git and GitHub</li>
-      <li><i class="fab fa-html5 fa-5x html-icon"></i> HTML Basics</li>
-      <li><i class="fab fa-css3-alt fa-5x css-icon"></i> CSS</li>
+      <li><i class="fab fa-cuttlefish fa-5x c-icon"></i><span class="text">C</span></li>
+      <li><i class="fab fa-cuttlefish fa-5x cpp-icon"></i><span class="text">C++</span></li>
+      <li><i class="fab fa-java fa-5x java-icon"></i><span class="text">Java</span></li>
+      <li><i class="fab fa-js-square fa-5x javascript-icon"></i><span class="text">JavaScript</span></li>
+      <li><i class="fab fa-git fa-5x git-icon"></i><span class="text">Git</span></li>
+      <li><i class="fab fa-github fa-5x github-icon"></i><span class="text">GitHub</span></li>
+      <li><i class="fab fa-html5 fa-5x html-icon"></i><span class="text">HTML</span></li>
+      <li><i class="fab fa-css3-alt fa-5x css-icon"></i><span class="text">CSS</span></li>
     </ul>
   </div>
 
+  <script>
+    // Toggle the mobile navigation visibility
+    document.getElementById("hamburger").addEventListener("click", function() {
+      const mobileNav = document.getElementById("mobile-nav");
+      mobileNav.classList.toggle("active");
+    });
+
+    // Initialize particles.js
+    particlesJS("particles-js", {
+      "particles": {
+        "number": {
+          "value": 50,
+          "density": {
+            "enable": true,
+            "value_area": 800
+          }
+        },
+        "color": { "value": "#ffffff" },
+        "shape": {
+          "type": "circle",
+          "stroke": { "width": 0, "color": "#000000" },
+          "polygon": { "nb_sides": 5 }
+        },
+        "opacity": {
+          "value": 0.5,
+          "random": false,
+          "anim": { "enable": false }
+        },
+        "size": {
+          "value": 3,
+          "random": true,
+          "anim": { "enable": false }
+        },
+        "line_linked": {
+          "enable": true,
+          "distance": 150,
+          "color": "#ffffff",
+          "opacity": 0.4,
+          "width": 1
+        },
+        "move": {
+          "enable": true,
+          "speed": 4,
+          "direction": "none",
+          "random": false,
+          "straight": false,
+          "out_mode": "out",
+          "bounce": false
+        }
+      },
+      "interactivity": {
+        "detect_on": "canvas",
+        "events": {
+          "onhover": { "enable": true, "mode": "repulse" },
+          "onclick": { "enable": true, "mode": "push" },
+          "resize": true
+        },
+        "modes": {
+          "repulse": { "distance": 100, "duration": 0.4 },
+          "push": { "particles_nb": 4 }
+        }
+      },
+      "retina_detect": true
+    });
+  </script>
 </body>
 </html>
