--- a/certification.html
+++ b/certification.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Certifications - Lee Joshua Reyes</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <style>
     body {
       margin: 0;
@@ -20,6 +21,7 @@
       padding: 20px 40px;
       background-color: #0f0f0f;
       border-bottom: 1px solid #222;
+      position: relative;
     }
 
     header a {
@@ -57,7 +59,7 @@
     }
 
     .container {
-      max-width: 800px;
+      max-width: 1000px;
       margin: 60px auto;
       padding: 0 20px;
     }
@@ -72,43 +74,192 @@
     ul {
       list-style: none;
       padding: 0;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
     }
 
     li {
-      background-color: #222;
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+      border-radius: 16px;
+      padding: 25px;
+      transition: all 0.3s ease-in-out;
+      cursor: pointer;
       display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 15px 20px;
-      margin: 15px 0;
-      border-radius: 10px;
-      font-size: 1.1rem;
+      flex-direction: column;
+      gap: 16px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
+      position: relative;
+      overflow: hidden;
+    }
+
+    li::before {
+      content: '';
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: radial-gradient(circle, rgba(232, 111, 251, 0.3) 0%, transparent 70%);
+      opacity: 0;
+      transition: opacity 0.4s ease;
+    }
+
+    li:hover::before {
+      opacity: 1;
+    }
+
+    li:hover {
+      transform: translateY(-6px) scale(1.02);
+      border-color: #e86ffb;
+      box-shadow: 0 12px 30px rgba(232, 111, 251, 0.3);
     }
 
     .cert-info {
       display: flex;
       align-items: center;
-      gap: 15px;
+      gap: 16px;
     }
 
     .cert-info img {
-      width: 100px;
-      height: 100px;
-      border-radius: 4px;
+      width: 70px;
+      height: 70px;
       object-fit: cover;
+      border-radius: 6px;
+    }
+
+    .cert-text {
+      font-size: 1.05rem;
+      font-weight: 600;
+      color: #ddd;
+      flex: 1;
     }
 
     .cert-link a {
+      font-size: 0.9rem;
       color: #e86ffb;
-      font-size: 1.2rem;
       text-decoration: none;
+      opacity: 0.7;
+      transition: opacity 0.3s, color 0.3s;
     }
 
     .cert-link a:hover {
+      opacity: 1;
       color: #fff;
+      text-decoration: underline;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+
+    .modal img {
+      max-width: 90%;
+      max-height: 90%;
+      object-fit: contain;
+      border-radius: 10px;
+    }
+
+    .modal.active {
+      display: flex;
+    }
+
+    .modal-close {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      font-size: 2rem;
+      color: #fff;
+      cursor: pointer;
+      z-index: 1100;
+    }
+
+    #particles-js {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      top: 0;
+      left: 0;
+    }
+
+    /* Hamburger Styles */
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      justify-content: space-between;
+      width: 28px;
+      height: 22px;
+      cursor: pointer;
+      z-index: 1003;
+    }
+
+    .hamburger span {
+      height: 3px;
+      width: 100%;
+      background: #aaa;
+      border-radius: 2px;
+      transition: all 0.3s ease;
+    }
+
+    .hamburger:hover span {
+      background: #fff;
+      transform: scaleX(1.2);
+    }
+
+    .mobile-nav {
+      display: none;
+    }
+
+    .mobile-nav.active {
+      display: flex;
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: 70%;
+      height: 100%;
+      background-color: #0f0f0f;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 30px;
+      transition: right 0.3s ease;
+      z-index: 1001;
+    }
+
+    .mobile-nav a {
+      font-size: 1.3rem;
+      color: #aaa;
+      text-decoration: none;
+      font-weight: 600;
+      transition: all 0.3s;
+    }
+
+    .mobile-nav a:hover {
+      color: #fff;
+      transform: scale(1.1);
     }
 
     @media (max-width: 768px) {
+      nav {
+        display: none;
+      }
+
+      .hamburger {
+        display: flex;
+      }
+
       .container {
         padding: 0 10px;
       }
@@ -117,25 +268,14 @@
         font-size: 2rem;
       }
 
-      li {
-        font-size: 1rem;
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
       .cert-info {
-        gap: 10px;
         flex-direction: column;
         align-items: flex-start;
       }
 
       .cert-info img {
-        width: 80px;
-        height: 80px;
-      }
-
-      .cert-link a {
-        font-size: 1rem;
+        width: 60px;
+        height: 60px;
       }
     }
 
@@ -152,28 +292,29 @@
         font-size: 1.8rem;
       }
 
-      li {
-        font-size: 0.95rem;
-        padding: 12px 15px;
-      }
-
-      .cert-info img {
-        width: 70px;
-        height: 70px;
+      .cert-text {
+        font-size: 1rem;
       }
 
       .cert-link a {
-        font-size: 1rem;
+        font-size: 0.9rem;
       }
     }
   </style>
 </head>
 <body>
 
+  <div id="particles-js"></div>
+
   <header>
     <a href="index.html">
       <div class="logo">Lee Joshua Reyes</div>
     </a>
+    <div class="hamburger" id="hamburger" onclick="toggleNav()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <nav>
       <a href="about.html">About</a>
       <a href="techstack.html">Tech Stack</a>
@@ -182,38 +323,152 @@
     </nav>
   </header>
 
+  <!-- Mobile navigation -->
+  <nav id="mobile-nav" class="mobile-nav">
+    <a href="about.html">About</a>
+    <a href="techstack.html">Tech Stack</a>
+    <a href="certification.html" class="active">Certifications</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+
   <div class="container">
     <h2>Certifications</h2>
     <ul>
-      <li>
+      <li onclick="openModal('wordcert.jpg')">
         <div class="cert-info">
           <img src="word.jpg" alt="Word Logo" />
-          Microsoft Office Specialist: Word Associate (Office 2019)
+          <div class="cert-text">Certified Microsoft Word Associate – Office 2019</div>
         </div>
         <div class="cert-link">
-          <a href="https://www.credly.com/badges/13609485-4e2d-46fd-8b8e-c0178022d378/public_url" target="Microsoft Office Specialist: Word Associate (Office 2019)">🔗</a>
+          <a href="https://www.credly.com/badges/13609485-4e2d-46fd-8b8e-c0178022d378/public_url" target="_blank">🔗 View Credential</a>
         </div>
       </li>
-      <li>
+      <li onclick="openModal('pptcert.jpg')">
         <div class="cert-info">
           <img src="ppt.jpg" alt="PowerPoint Logo" />
-          Microsoft Office Specialist: PowerPoint Associate (Office 2019)
+          <div class="cert-text">Certified Microsoft PowerPoint Associate – Office 2019</div>
         </div>
         <div class="cert-link">
-          <a href="https://www.credly.com/badges/c859ba33-d3b0-485a-8e65-1b8fb5ccb22b/public_url" target="Microsoft Office Specialist: PowerPoint Associate (Office 2019)">🔗</a>
+          <a href="https://www.credly.com/badges/c859ba33-d3b0-485a-8e65-1b8fb5ccb22b/public_url" target="_blank">🔗 View Credential</a>
         </div>
       </li>
-      <li>
+      <li onclick="openModal('datacert.jpg')">
         <div class="cert-info">
           <img src="databases.jpg" alt="Database Logo" />
-          IT Specialist - Databases
+          <div class="cert-text">IT Specialist – Databases Certification</div>
         </div>
         <div class="cert-link">
-          <a href="https://www.credly.com/badges/16cc10c7-5c2e-401d-97ba-48edd88bcb77/public_url" target="IT Specialist - Databases">🔗</a>
+          <a href="https://www.credly.com/badges/16cc10c7-5c2e-401d-97ba-48edd88bcb77/public_url" target="_blank">🔗 View Credential</a>
         </div>
       </li>
     </ul>
   </div>
 
+  <div id="certModal" class="modal">
+    <span class="modal-close" onclick="closeModal()">✖</span>
+    <img id="modalImage" src="" alt="Certification Image" />
+  </div>
+
+  <script>
+    function openModal(imageSrc) {
+      const modal = document.getElementById('certModal');
+      const modalImage = document.getElementById('modalImage');
+      modal.classList.add('active');
+      modalImage.src = imageSrc;
+    }
+
+    function closeModal() {
+      const modal = document.getElementById('certModal');
+      modal.classList.remove('active');
+    }
+
+    // Toggle mobile navigation
+    function toggleNav() {
+      const mobileNav = document.getElementById('mobile-nav');
+      mobileNav.classList.toggle('active');
+    }
+
+    // Initialize particles.js
+    particlesJS('particles-js', {
+      "particles": {
+        "number": {
+          "value": 80,
+          "density": {
+            "enable": true,
+            "value_area": 800
+          }
+        },
+        "color": {
+          "value": "#e86ffb"
+        },
+        "shape": {
+          "type": "circle",
+          "stroke": {
+            "width": 0,
+            "color": "#000000"
+          },
+          "polygon": {
+            "nb_sides": 5
+          }
+        },
+        "opacity": {
+          "value": 0.5,
+          "random": false,
+          "anim": {
+            "enable": true,
+            "speed": 1,
+            "opacity_min": 0.1,
+            "sync": false
+          }
+        },
+        "size": {
+          "value": 3,
+          "random": true,
+          "anim": {
+            "enable": true,
+            "speed": 40,
+            "size_min": 0.1,
+            "sync": false
+          }
+        },
+        "line_linked": {
+          "enable": true,
+          "distance": 150,
+          "color": "#ffffff",
+          "opacity": 0.4,
+          "width": 1
+        },
+        "move": {
+          "enable": true,
+          "speed": 6,
+          "direction": "none",
+          "random": false,
+          "straight": false,
+          "out_mode": "out",
+          "bounce": false,
+          "attract": {
+            "enable": false,
+            "rotateX": 600,
+            "rotateY": 1200
+          }
+        }
+      },
+      "interactivity": {
+        "detect_on": "window",
+        "events": {
+          "onhover": {
+            "enable": true,
+            "mode": "repulse"
+          },
+          "onclick": {
+            "enable": true,
+            "mode": "push"
+          },
+          "resize": true
+        }
+      },
+      "retina_detect": true
+    });
+  </script>
 </body>
 </html>
