--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
       min-height: 100vh;
       text-align: center;
       padding: 20px;
+      position: relative;
+    }
+
+    #particles-js {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
     }
 
     header {
@@ -195,6 +205,8 @@
   </style>
 </head>
 <body>
+  <div id="particles-js"></div>
+
   <header>
     <nav>
       <a href="about.html">About</a>
@@ -206,7 +218,7 @@
       <img src="lee_pic.jpg" alt="Portrait of Lee Joshua Reyes" />
       <h1>Hi, I'm Lee Joshua Reyes</h1>
     </a>
-    <h2>Information Technology Student</h2>
+    <h2>Aspiring IT Professional</h2>
     <p>
       I'm Lee, an Information Technology student at St. Dominic College of Asia. 
       My portfolio says more about me than I ever could. 
@@ -217,5 +229,61 @@
     <a href="https://github.com/sdca-lee-joshua-reyes">github</a>
     <a href="email.html">email</a>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script>
+    particlesJS("particles-js", {
+      "particles": {
+        "number": {
+          "value": 50, 
+          "density": {
+            "enable": true,
+            "value_area": 800
+          }
+        },
+        "color": {
+          "value": "#e86ffb"
+        },
+        "shape": {
+          "type": "circle",
+          "stroke": {
+            "width": 0,
+            "color": "#e86ffb"
+          },
+        },
+        "opacity": {
+          "value": 0.4, 
+          "random": true,
+          "anim": {
+            "enable": true,
+            "speed": 1,
+            "opacity_min": 0.1,
+            "sync": false
+          }
+        },
+        "size": {
+          "value": 3,
+          "random": true,
+          "anim": {
+            "enable": true,
+            "speed": 8,
+            "size_min": 0.1,
+            "sync": false
+          }
+        },
+        "move": {
+          "enable": true,
+          "speed": 1,
+          "direction": "none",
+          "random": false,
+          "straight": false,
+          "out_mode": "out",
+          "bounce": false,
+        }
+      },
+      "retina_detect": true
+    });
+  </script>
+
 </body>
 </html>
