--- a/techstack.html
+++ b/techstack.html
@@ -8,7 +8,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <style>
-    /* Same Styles as about.html for consistency */
+
     html, body {
       height: 100%;
     }
@@ -225,7 +225,14 @@
     .git-icon { color: #f05032; }
     .javascript-icon { color: #f0db4f; }
 
-    /* Responsive Design */
+    @media (max-width: 1024px) and (min-width: 769px) {
+      ul {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
+        column-gap: 40px;
+      }
+    }
+
     @media (max-width: 768px) {
       nav {
         display: none;
@@ -264,7 +271,7 @@
       }
 
       li .text {
-        font-size: 1.2rem;
+        font-size: 1.3rem;
       }
     }
 
