OK TIGNAN NATEN

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>About - Lee Joshua Reyes</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="CSS Files/about.css" />
+  <link rel="stylesheet" href="css, images, & js/CSS Files/about.css" />
 </head>
 <body>
 
@@ -37,7 +37,7 @@
 
   <div class="container">
     <div class="profile-img">
-      <img src="images/lee_pic.jpg" alt="Lee Joshua Reyes">
+      <img src="css, images, & js/images/lee_pic.jpg" alt="Lee Joshua Reyes">
     </div>
     <div class="about-text">
       <h2>Ball. Code. Repeat.</h2>
@@ -61,6 +61,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <script src="JS Files/about.js"></script>
+  <script src="css, images, & js/JS Files/about.js"></script>
 </body>
 </html>
