--- a/certification.html
+++ b/certification.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Certifications - Lee Joshua Reyes</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="CSS Files/certification.css" />
+  <link rel="stylesheet" href="css, images, & js/CSS Files/certification.css" />
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 </head>
 <body>
@@ -39,27 +39,27 @@
   <div class="container">
     <h2>Certifications</h2>
     <ul>
-      <li onclick="openModal('images/wordcert.jpg')">
+      <li onclick="openModal('css, images, & js/images/wordcert.jpg')">
         <div class="cert-info">
-          <img src="images/word.jpg" alt="Word Logo" />
+          <img src="css, images, & js/images/word.jpg" alt="Word Logo" />
           <div class="cert-text">Certified Microsoft Word Associate – Office 2019</div>
         </div>
         <div class="cert-link">
           <a href="https://www.credly.com/badges/13609485-4e2d-46fd-8b8e-c0178022d378/public_url" target="_blank">🔗 View Credential</a>
         </div>
       </li>
-      <li onclick="openModal('images/pptcert.jpg')">
+      <li onclick="openModal('css, images, & js/images/pptcert.jpg')">
         <div class="cert-info">
-          <img src="images/ppt.jpg" alt="PowerPoint Logo" />
+          <img src="css, images, & js/images/ppt.jpg" alt="PowerPoint Logo" />
           <div class="cert-text">Certified Microsoft PowerPoint Associate – Office 2019</div>
         </div>
         <div class="cert-link">
           <a href="https://www.credly.com/badges/c859ba33-d3b0-485a-8e65-1b8fb5ccb22b/public_url" target="_blank">🔗 View Credential</a>
         </div>
       </li>
-      <li onclick="openModal('images/datacert.jpg')">
+      <li onclick="openModal('css, images, & js/images/datacert.jpg')">
         <div class="cert-info">
-          <img src="images/databases.jpg" alt="Database Logo" />
+          <img src="css, images, & js/images/databases.jpg" alt="Database Logo" />
           <div class="cert-text">IT Specialist – Databases Certification</div>
         </div>
         <div class="cert-link">
@@ -74,6 +74,6 @@
     <img id="modalImage" src="" alt="Certification Image" />
   </div>
 
-  <script src="JS Files/certification.js"></script>
+  <script src="css, images, & js/JS Files/certification.js"></script>
 </body>
 </html>
