--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Lee Joshua Reyes</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="CSS Files/index.css" />
+  <link rel="stylesheet" href="css, images, & js/CSS Files/index.css" />
 </head>
 <body>
   <div id="particles-js"></div>
@@ -17,8 +17,8 @@
       <a href="certification.html">Certifications</a>
       <a href="contact.html">Contact</a>
     </nav>
-    <a href="portfolio.html" class="logo-link">
-      <img src="images/lee_pic.jpg" alt="Portrait of Lee Joshua Reyes" />
+    <a href="index.html" class="logo-link">
+      <img src="css, images, & js/images/lee_pic.jpg" alt="Portrait of Lee Joshua Reyes" />
       <h1>Hi, I'm Lee Joshua Reyes</h1>
     </a>
     <h2>Aspiring IT Professional</h2>
@@ -34,6 +34,6 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <script src="JS Files/index.js"></script>
+  <script src="css, images, & js/JS Files/index.js"></script>
 </body>
 </html>
