--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Contact - Lee Joshua Reyes</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="CSS Files/contact.css">
+  <link rel="stylesheet" href="css, images, & js/CSS Files/contact.css">
 </head>
 <body>
 
@@ -44,7 +44,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <script src="JS Files/contact.js"></script>
+  <script src="css, images, & js/JS Files/contact.js"></script>
 
 </body>
 </html>
