--- a/email.html
+++ b/email.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />  
   <title>Email Me</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="CSS Files/email.css">
+  <link rel="stylesheet" href="css, images, & js/CSS Files/email.css">
 </head>
 <body>
 
@@ -22,7 +22,7 @@
   </form>
 
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <script src="JS Files/email.js"></script>
+  <script src="css, images, & js/JS Files/email.js"></script>
 
 </body>
 </html>
