--- a/techstack.html
+++ b/techstack.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <link rel="stylesheet" href="CSS Files/techstack.css">
+  <link rel="stylesheet" href="css, images, & js/CSS Files/techstack.css">
 </head>
 <body>
 
@@ -49,6 +49,6 @@
     </ul>
   </div>
 
-  <script src="JS Files/techstack.js"></script>
+  <script src="css, images, & js/JS Files/techstack.js"></script>
 </body>
 </html>
